--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ nav{
     background-color: rgb(128, 0, 122);
     font-family: 'Montserrat',
     sans-serif;
- 
+ margin:0px;
  }
 
  .box-border {box-sizing: border-box; background-color: white; width: 45%; 
