--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
      
      padding: 1rem,2.5rem;
      color: aliceblue;
-     border-top-left-radius: 1rem;
-     border-bottom-right-radius: 1rem;
+     border-bottom-left-radius: 1rem;
+     border-top-right-radius: 1rem;
   
      
 }
